--- a/index.html
+++ b/index.html
@@ -36,8 +36,10 @@
 				</div>
 			</div>
 			<div class="col s12 m6 8">
-				<p>CS major at UIUC, expected to graduate in Dec '16</p>
-				<p>Interested in software for social good, full-stack web development, data science, and technology policy and ethics</p>
+				<p>Hi! I'm Emily, a fourth-year CS major at UIUC expected to graduate in Dec '16.</p>
+				<p> I have experience writing editorials and indepths from my high school days where I spent 3 years on staff for our national award-winning newsmagazine, Lakota East <i>Spark</i> (check out our <a href="https://issuu.com/lehsspark">Issuu</a>).</p>
+				<p>While I no longer do any journalism-related activities, I still believe it's important to have people's stories get told and people's voicea get heard. I'm very fortunate that I have found avenues to apply my software engineering skills towards this goal.</p>
+				<p>My other interests include: full-stack web development, software for social good, data science and machine learning, and technology policy and ethics.</p>
 			</div>
 		</div>
 		<div class="row">
