--- a/index.html
+++ b/index.html
@@ -1,124 +1,51 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="description" content="I'm a current CS student at UIUC. Check out my work.">
   <meta http-equiv="content-type" content="text/html;charset=UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-  rel="stylesheet">
-  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css">
-
-  <link rel="stylesheet" href="styles.css">
-
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css" />
+  <link rel="stylesheet" href="styles.css" />
   <title>Emily Chao</title>
 </head>
+
 <body>
   <div class="container">
-    <div class="row"></div>
-    <div class="row"></div>
+    <h1 class="text-center">Emily Chao</h1>
+    <img class="self" src="photo.jpg" alt="self"></img>
+    <a class="button button-primary" href="https://www.linkedin.com/in/elchao96/">LinkedIn</a>
+    <a class="button button-primary" href="https://github.com/elchao96">GitHub</a>
+    <a class="button button-primary" href="https://www.twitter.com/emilychaosays">Twitter</a>
+    <a class="button button-primary" href="https://www.instagram.com/emchao13/">Instagram</a>
+    <a class="button button-primary" href="https://medium.com/@emchao">Medium</a>
+
     <div class="row">
-      <div class="col s12">
-        <h1 class="center-align">Emily Chao</h1>
+      <div class="one-half column">
+        <h2>By Day</h2>
+        <p>I currently work as a software engineer at <a href="https://recidiviz.org">Recidiviz</a>, working on tools
+          and
+          data platforms that shed light on ways to nudge criminal justice systems in the US towards decarceration.
+          Previously, I was an ML engineer at Twitter, working on detections and remediations that support user trust
+          and
+          safety and prevent harassment, abuse and manipulation in online discourse on the platform.</p>
+        <p><i>Areas of Interest</i>: civic technology, trust and safety in online discourse, ethical and fair ML/AI,
+          technology
+          policy</p>
+      </div>
+      <div class="one-half column">
+        <h2>By Night</h2>
+        <p>I dabble in poetry, street and landscape photography as creative art practices. I also enjoy cooking Chinese
+          food, reading a lot of fiction, poetry and graphic novels, curating and degendering fashion, and listening to
+          albums from beginning to end.</p>
+        <p><i>Causes I Care About</i>: Black Lives Matter, prison and police abolition, urbanism, anti-capitalism</p>
       </div>
     </div>
-    <div class="row">
-      <div class="col s12 m6 4">
-        <div class="center-align"><img src="profile.jpg"></img></div>
-        <div class="center-align">
-          <a href="https://github.com/elchao96" class="btn-floating btn-large waves-effect 	waves-light purple" target="_blank"><i class="fa fa-2x fa-github"></i></a>
-          <a href="https://twitter.com/emilychaosays" class="btn-floating btn-large waves-effect waves-light purple" target="_blank"><i class="fa fa-2x fa-twitter"></i></a>
-          <a href="https://linkedin.com/in/elchao96" class="btn-floating btn-large waves-effect waves-light purple" target="_blank"><i class="fa fa-2x fa-linkedin"></i></a>
-          <a href="https://medium.com/@emchao" class="btn-floating btn-large waves-effect waves-light purple" target="_blank"><i class="fa fa-2x fa-medium"></i></a>
-        </div>
-      </div>
-      <div class="col s12 m6 8">
-        <p>Hi! I'm Emily, a recent graduate of the University of Illinois at Urbana-Champaign with a B.S. in Computer Science. I currently work at Twitter as a software engineer.</p>
-        <p>While I love writing code (you can see some of my projects below and on <a href="https://github.com/elchao96" target="_blank">Github</a>), I also like writing essays. I have experience writing editorials and indepths from my high school days where I spent 3 years on staff for our national award-winning newsmagazine, Lakota East <i>Spark</i> (check out our <a href="https://issuu.com/lehsspark">Issuu</a>). Now I occasionally produce pieces on my <a href="https://medium.com/@emchao" target="_blank">Medium</a>.</p>
-        <p>While I no longer do any journalism-related activities, I still believe it's important to have people's stories get told and people's voices get heard. I'm very fortunate that I have found avenues to apply my software engineering skills towards this goal.</p>
-        <p>My other interests include: full-stack web development, software for social good, data science and machine learning, and technology policy and ethics.</p>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col s12">
-        <h1 class="center-align">Selected Projects</h1>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col s12 m4">
-        <div class="card purple">
-          <div class="card-content white-text">
-            <span class="card-title">#TravelSafe</span>
-            <p>A Chrome Extension showing how safe and LGBTQ-friendly a city is based on Airbnb listings.</p>
-          </div>
-          <div class="card-action">
-            <a href="https://github.com/elchao96/TravelSafe" target="_blank">Github</a>
-          </div>
-        </div>
-      </div>
-      <div class="col s12 m4">
-        <div class="card purple">
-          <div class="card-content white-text">
-            <span class="card-title">QueerSpeaks</span>
-            <p>A prototype for a social network and article sharing site targeted towards AAPI LGBTQ young people.</p>
-          </div>
-          <div class="card-action">
-            <a href="https://github.com/elchao96/QueerSpeaks" target="_blank">Github</a>
-          </div>
-        </div>
-      </div>
-      <div class="col s12 m4">
-        <div class="card purple">
-          <div class="card-content white-text">
-            <span class="card-title">LAP</span>
-            <p>A prototype for a social network and digital assistants for newly-released ex-convicts.</p>
-          </div>
-          <div class="card-action">
-            <a href="https://github.com/LinkedinHackday-Lap/LinkedinHackday-Lap" target="_blank">V1</a>
-            <a href="https://github.com/cs498rklap/final-project" target="_blank">V2</a>
-          </div>
-        </div>
-      </div>
-      <div class="col s12 m4">
-        <div class="card purple">
-          <div class="card-content white-text">
-            <span class="card-title">Clean Energy Myanmar</span>
-            <p>Analyze characteristics of Myanmar townships and how that influences ability to pay for electricity.</p>
-          </div>
-          <div class="card-action">
-            <a href="https://github.com/elchao96/clean-energy-myanmar" target="_blank">Github</a>
-          </div>
-        </div>
-      </div>
-      <div class="col s12 m4">
-        <div class="card purple">
-          <div class="card-content white-text">
-            <span class="card-title">I Change, You Change</span>
-            <p>Fictional novella set in the future, postulating on what would happen if VR went unregulated?</p>
-          </div>
-          <div class="card-action">
-            <a href="https://medium.com/series/i-change-you-change-561d5f5ff657" target="_blank">Medium Series</a>
-          </div>
-        </div>
-      </div>
-      <div class="col s12 m4">
-        <div class="card purple">
-          <div class="card-content white-text">
-            <span class="card-title">WCS @ Illinois</span>
-            <p>Tech Team Co-Chair Fall '16, Webmaster '15-'16, Mentoring Chair '14-'15</p>
-          </div>
-          <div class="card-action">
-            <a href="https://github.com/IllinoisWCS" target="_blank">Github</a>
-            <a href="https://wcs.illinois.edu" target="_blank">Website</a>
-          </div>
-        </div>
-      </div>
-    </div>
+
   </div>
-  <script src="https://code.jquery.com/jquery-2.2.3.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 </body>
+
 </html>
