--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
   <div class="container">
-    <h1 class="text-center">Emily Chao</h1>
+    <h1 class="text-center">Emily Chao (she/her)</h1>
     <img class="self" src="photo.jpg" alt="self"></img>
     <a class="button button-primary" href="https://www.linkedin.com/in/elchao96/">LinkedIn</a>
     <a class="button button-primary" href="https://github.com/elchao96">GitHub</a>
