fixing up styles

--- a/index.html
+++ b/index.html
@@ -8,41 +8,43 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css" />
+  <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet" />
   <link rel="stylesheet" href="styles.css" />
   <title>Emily Chao</title>
 </head>
 
 <body>
   <div class="container">
-    <h1 class="text-center">Emily Chao (she/her)</h1>
+    <h1 class="text-center">Emily Chao</h1>
+    <p class="text-center">Pronouns: she/they</p>
     <img class="self" src="photo.jpg" alt="self"></img>
-    <a class="button button-primary" href="https://www.linkedin.com/in/elchao96/">LinkedIn</a>
-    <a class="button button-primary" href="https://github.com/elchao96">GitHub</a>
-    <a class="button button-primary" href="https://www.twitter.com/emilychaosays">Twitter</a>
-    <a class="button button-primary" href="https://www.instagram.com/emchao13/">Instagram</a>
-
-    <div class="row">
-      <div class="one-half column">
-        <h2>By Day</h2>
-        <p>I currently work as a software engineer at <a href="https://recidiviz.org">Recidiviz</a>, working on tools
-          and
-          data platforms that shed light on ways to nudge criminal justice systems in the US towards decarceration.
-          Previously, I was an ML engineer at Twitter, working on detections and remediations that support user trust
-          and
-          safety and prevent harassment, abuse and manipulation in online discourse on the platform.</p>
-        <p><i>Areas of Interest</i>: civic technology, trust and safety in online discourse, ethical and fair ML/AI,
-          technology
-          policy</p>
-      </div>
-      <div class="one-half column">
-        <h2>By Night</h2>
-        <p>I dabble in poetry, street and landscape photography as creative art practices. I also enjoy cooking Chinese
-          food, reading a lot of fiction, poetry and graphic novels, curating and degendering fashion, and listening to
-          albums from beginning to end.</p>
-        <p><i>Causes I Care About</i>: Black Lives Matter, prison and police abolition, urbanism, anti-capitalism</p>
-      </div>
+    <div class="container text-center">
+      <a class="button button-primary" href="https://www.linkedin.com/in/elchao96/">LinkedIn</a>
+      <a class="button button-primary" href="https://github.com/elchao96">GitHub</a>
+      <a class="button button-primary" href="https://www.twitter.com/emilychaosays">Twitter</a>
+      <a class="button button-primary" href="https://www.instagram.com/emchao13/">Instagram</a>
     </div>
 
+    <h3>By Day</h3>
+    <p>I currently work as a software engineer at <a class="link" href="https://recidiviz.org">Recidiviz</a>, working on
+      tools
+      and
+      data platforms that shed light on ways to nudge criminal justice systems in the US towards decarceration.
+      Previously, I was an ML engineer at <a class="link" href="https://about.twitter.com/">Twitter</a>, working on
+      detections and remediations that support user trust
+      and
+      safety and prevent harassment, abuse and manipulation in online discourse on the platform. I graduated from the <a
+        class="link" href="http://illinois.edu/">University of Illinois at Urbana-Champaign</a> with a B.S. in Computer
+      Science.</p>
+    <p><i>Areas of Interest</i>: civic technology, trust and safety in online discourse, ethical and fair ML/AI,
+      technology
+      policy</p>
+
+    <h3>By Night</h3>
+    <p>I dabble in poetry, street and landscape photography as creative art practices. I also enjoy cooking Chinese
+      food, reading a lot of fiction, poetry and graphic novels, curating and degendering fashion, and listening to
+      albums from beginning to end.</p>
+    <p><i>Causes I Care About</i>: Black Lives Matter, prison and police abolition, urbanism, anti-capitalism</p>
   </div>
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 </body>
