--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
 
     <h3>By Night</h3>
     <p>I dabble in poetry, street and landscape photography as creative art practices. I also enjoy cooking Chinese
-      food, reading a lot of fiction, poetry and graphic novels, curating and degendering fashion, and listening to
+      food, reading a lot of fiction, poetry and graphic novels, watching anything animated, curating and degendering
+      fashion, and listening to
       albums from beginning to end.</p>
     <p><i>Causes I Care About</i>: Black Lives Matter, prison and police abolition, urbanism, anti-capitalism</p>
   </div>
