adding media roundup

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     </div>
     <div class="container text-center">
       <a class="button button-secondary" href="poems/">Poetry</a>
+      <a class="button button-secondary" href="media/">Media Roundups</a>
     </div>
 
     <h3>By Day</h3>
