adding more roundups

--- a/poems/index.html
+++ b/poems/index.html
@@ -18,7 +18,9 @@
     <h1 class="text-center">Poems</h1>
     <p>I write poetry as a creative art practice. Below is a collection of all of my work that I've published publicly.</p>
     <ul>
-        <p><a href="disappointment.html">Disappointment</a></p>
+        <ul>
+        <li><a href="disappointment.html">Disappointment</a></li>
+        </ul>
     </ul>
     <a class="button button-secondary" href="../">Home</a>
   </div>
