--- a/media/Black.html
+++ b/media/Black.html
@@ -9,22 +9,20 @@
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css" />
   <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet" />
-  <link rel="stylesheet" href="../styles.css" />
-  <title>Poetry: Emily Chao</title>
+  <link rel="stylesheet" href="../../styles.css" />
+  <title>Favorite Books by Black Authors</title>
 </head>
 
 <body>
   <div class="container">
-    <h1 class="text-center">Poems</h1>
-    <p>I write poetry as a creative art practice. Below is a collection of all of my work that I've published publicly.</p>
-    <ul>
-        <ul>
-        {{#poems}}
-        <li><a href="{{link}}">{{title}}</a></li>
-        {{/poems}}
-        </ul>
-    </ul>
-    <a class="button button-secondary" href="../">Home</a>
+    <h1>My Favorite Books by Black Authors</h1>
+<ul>
+<li><em>The Broken Earth Trilogy</em> by N.K. Jemisin</li>
+<li><em>Magical Negro</em> by Morgan Parker</li>
+<li><em>Citizen: An American Lyric</em> by Claudia Rankine</li>
+<li><em>Between the World and Me</em> by Ta-Nehisi Coates</li>
+</ul>
+    <a class="button button-secondary" href=".">Home</a>
   </div>
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 </body>
