--- a/media/index.html
+++ b/media/index.html
@@ -16,8 +16,26 @@
 <body>
     <div class="container">
         <h1 class="text-center">Media Roundups</h1>
-        <p><a href="2021/January.html">January 2021</a></p>
-        <p><a href="2021/February.html">February 2021</a></p>
+        <p>I enjoy reading and listening to music. I am also committed to sharing what I'm reading more publicly so that perhaps folx can get some inspiration for what they want to read next and also in reverse, I can find some inspiration from others for what I can read next. In addition, I hope to use this as a way to figure out an accountability mechanism for myself to read more diverse voices, both within the US and also globally.</p>
+        <div class="row">
+            <div class="one-half column">
+                <p>For 2020 (and hopefully beyond), I plan on tracking every single book and album I've consumed and doing a monthly round up (save for 2020 itself, because...you know).</p>
+                <ul>
+                    <li><a href="2020/All.html">All 2020</a></li>
+                    <li><a href="2021/January.html">January 2021</a></li>
+                    <li><a href="2021/February.html">February 2021</a></li>
+                </ul>
+            </div>
+            <div class="one-half column">
+                <p>I definitely want to read as many different voices as possible, but also want to share and amplify the voices that really resonated with me. Here are a few lists of books that I particularly enjoyed by voices who are not white cis hetero men.</p>
+                <ul>
+                    <li><a href="Asian.html">Books by Asian authors</a></li>
+                    <li><a href="Black.html">Books by Black authors</a></li>
+                    <li><a href="Indigenous.html">Books by Indigenous authors</a></li>
+                </ul>
+            </div>
+        </div>
+        
         <a class="button button-secondary" href="../">Home</a>
     </div>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
