--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       and
       safety and prevent harassment, abuse and manipulation in online discourse on the platform. I graduated from the <a
         class="link" href="http://illinois.edu/">University of Illinois at Urbana-Champaign</a> with a B.S. in Computer
-      Science.</p>
+      Science. I'm currently living on unceded Ohlone land (San Francisco, CA).</p>
     <p><i>Areas of Interest</i>: civic technology, trust and safety in online discourse, ethical and fair ML/AI,
       technology
       policy</p>
