--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
   <div class="container">
     <h1 class="text-center">Emily Chao</h1>
-    <p class="text-center">Pronouns: she/they</p>
+    <p class="text-center">Pronouns: they/she</p>
     <img class="self" src="photo.jpg" alt="self"></img>
     <div class="container text-center">
       <a class="button button-primary" href="https://www.linkedin.com/in/elchao96/">LinkedIn</a>
