--- a/index.html
+++ b/index.html
@@ -46,6 +46,11 @@
       fashion, and listening to
       albums from beginning to end.</p>
     <p><i>Causes I Care About</i>: Black Lives Matter, prison and police abolition, urbanism, anti-capitalism</p>
+
+    <h3>Fun Projects</h3>
+    <ul>
+      <li><a href="/pandemic-data">Pandemic Data</a></li>
+    </ul>
   </div>
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 </body>
