--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
     <h3>Fun Projects</h3>
     <ul>
       <li><a href="/pandemic-data">Pandemic Data</a></li>
+      <li><a href="/media-roundups">Media Roundups</a></li>
     </ul>
   </div>
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
