--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
 
     <h3>Fun Projects</h3>
     <ul>
-      <li><a href="/pandemic-data">Pandemic Data</a></li>
-      <li><a href="/media-roundups">Media Roundups 2021</a></li>
+      <li><a class="link" href="/pandemic-data">Pandemic Data</a></li>
+      <li><a class="link" href="/media-roundups">Media Roundups 2021</a></li>
     </ul>
   </div>
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
