--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
       policy</p>
 
     <h3>By Night</h3>
-    <p>I dabble in poetry, street and landscape photography as creative art practices. I also enjoy cooking Chinese
+    <p>I help organize the <a class="link" href="https://ebabz.org/">East Bay Alternative Books and Zines Fest</a> and
+      am also helping to steward <a class="link" href="https://school.logicmag.io/">Logic School</a>. I dabble in
+      creative writing, street and landscape photography as creative art practices. I also enjoy cooking Chinese
       food, reading a lot of fiction, poetry and graphic novels, watching anything animated, curating and degendering
       fashion, and listening to
       albums from beginning to end.</p>
