Adding additional text

--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
       food, reading a lot of fiction, poetry and graphic novels, watching anything animated, curating and degendering
       fashion, and listening to
       albums from beginning to end.</p>
-    <p><i>Causes I Care About</i>: Black Lives Matter, prison and police abolition, urbanism, anti-capitalism</p>
+    <p><i>Causes I Care About</i>: Asian American political solidarity, Black Lives Matter, prison and police abolition,
+      urbanism, anti-capitalism</p>
 
     <h3>Fun Projects</h3>
     <ul>
