Adding more info

--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
     <div class="container text-center">
       <a class="button button-primary" href="https://www.linkedin.com/in/elchao96/">LinkedIn</a>
       <a class="button button-primary" href="https://github.com/elchao96">GitHub</a>
-      <a class="button button-primary" href="https://www.twitter.com/emilychaosays">Twitter</a>
       <a class="button button-primary" href="https://www.instagram.com/emchao13/">Instagram</a>
     </div>
 
@@ -36,19 +35,34 @@
       safety and prevent harassment, abuse and manipulation in online discourse on the platform. I graduated from the <a
         class="link" href="http://illinois.edu/">University of Illinois at Urbana-Champaign</a> with a B.S. in Computer
       Science. I'm currently living on unceded Ohlone land (Oakland, CA).</p>
-    <p><i>Areas of Interest</i>: civic technology, trust and safety in online discourse, ethical and fair ML/AI,
+    <p><i>Areas of Interest</i>: trust and safety in online discourse, ethical and fair ML/AI,
       technology
-      policy</p>
+      policy, socio-political and justice-oriented technology</p>
 
     <h3>By Night</h3>
     <p>I help organize the <a class="link" href="https://ebabz.org/">East Bay Alternative Books and Zines Fest</a> and
       am also helping to steward <a class="link" href="https://school.logicmag.io/">Logic School</a>. I dabble in
       creative writing, street and landscape photography as creative art practices. I also enjoy cooking Chinese
-      food, reading a lot of fiction, poetry and graphic novels, watching anything animated, curating and degendering
+      food, reading a lot of science fiction and fantasy novels, poetry and graphic novels, watching anything animated,
+      curating and degendering
       fashion, and listening to
       albums from beginning to end.</p>
     <p><i>Causes I Care About</i>: Asian American political solidarity, Black Lives Matter, prison and police abolition,
       urbanism, anti-capitalism</p>
+
+    <h3>Favorite Books</h3>
+    <ul>
+      <li><i>Singing Hills Cycle</i> novellas by Nghi Vo</li>
+      <li><i>Monk & Robot</i> novellas by Becky Chambers</li>
+      <li><i>The Jakarta Method</i> by Vincent Bevins</li>
+      <li><i>A Tale for the Time Being</i> by Ruth Ozeki</li>
+      <li><i>Girl, Woman, Other</i> by Bernardine Evaristo</li>
+      <li><i>The Way Spring Arrives and Other Stories</i> anthology curated by Yu Chen, et. al.</li>
+      <li><i>I'm Waiting for You and Other Stories</i> by Kim Bo-Young</li>
+      <li><i>Ace</i> by Angela Chen</li>
+      <li><i>The Big Friendship</i> by Aminatou Sow and Anne Friedman</li>
+      <li><i>On a Sunbeam</i> by Tillie Walden</li>
+    </ul>
 
     <h3>Fun Projects</h3>
     <ul>
