--- a/pandemic-data/index.html
+++ b/pandemic-data/index.html
@@ -9,7 +9,7 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css" />
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet" />
-    <link href="styles.css" rel="stylesheet" />
+    <link href="../styles.css" rel="stylesheet" />
     <title>Quarantine Data</title>
 </head>
 
