--- a/index.html
+++ b/index.html
@@ -25,49 +25,48 @@
     </div>
 
     <h3>By Day</h3>
-    <p>I currently work as a software engineer at <a class="link" href="https://recidiviz.org">Recidiviz</a>, working on
-      tools
+    <p>I currently work as a data engineer at <a class="link" href="https://recidiviz.org">Recidiviz</a>,
+      specifically working on
+      improving the data platform the company has built that can then shed light on ways to nudge criminal justice
+      systems in the US towards decarceration.</p>
+    <p>Previously, I was an ML engineer at <a class="link" href="https://about.twitter.com/">Twitter</a>, working on
+      detections and remediations that supported user trust
       and
-      data platforms that shed light on ways to nudge criminal justice systems in the US towards decarceration.
-      Previously, I was an ML engineer at <a class="link" href="https://about.twitter.com/">Twitter</a>, working on
-      detections and remediations that support user trust
-      and
-      safety and prevent harassment, abuse and manipulation in online discourse on the platform. I graduated from the <a
-        class="link" href="http://illinois.edu/">University of Illinois at Urbana-Champaign</a> with a B.S. in Computer
-      Science. I'm currently living on unceded Ohlone land (Oakland, CA).</p>
+      safety and prevented harassment, abuse and manipulation in online discourse on the platform. My experience there
+      primarily informs my own views on how we should organize as tech workers today.</p>
+    <p>I graduated from the
+      <a class="link" href="http://illinois.edu/">University of Illinois at Urbana-Champaign</a> with a B.S. in Computer
+      Science. I'm currently living on unceded Ohlone land (Oakland, CA).
+    </p>
     <p><i>Areas of Interest</i>: trust and safety in online discourse, ethical and fair ML/AI,
       technology
       policy, socio-political and justice-oriented technology</p>
 
     <h3>By Night</h3>
     <p>I help organize the <a class="link" href="https://ebabz.org/">East Bay Alternative Books and Zines Fest</a> and
-      am also helping to steward <a class="link" href="https://school.logicmag.io/">Logic School</a>. I dabble in
-      creative writing, street and landscape photography as creative art practices. I also enjoy cooking Chinese
-      food, reading a lot of science fiction and fantasy novels, poetry and graphic novels, watching anything animated,
+      was both a cohort member and then a co-steward of <a class="link" href="https://school.logicmag.io/">Collective
+        Action School</a>
+      (formerly Logic School), a community school for tech workers. I am currently enrolled in the Drawing Data by Hand
+      class held via <a class="link" href="https://sfpc.study/">the School for Poetic Computation.</a> </p>
+    <p>I dabble in
+      creative writing, street and landscape photography, and mild (emphasis: <i>mild</i>) data art as creative art
+      practices. I also enjoy cooking Chinese
+      food, reading a lot of science fiction and fantasy novels, watching anything animated,
       curating and degendering
       fashion, and listening to
       albums from beginning to end.</p>
-    <p><i>Causes I Care About</i>: Asian American political solidarity, Black Lives Matter, prison and police abolition,
-      urbanism, anti-capitalism</p>
+    <p><i>Causes I Care About</i>: Asian American political solidarity, queer/trans political solidarity and
+      power-building, Black Lives Matter, prison and police abolition,
+      sustainable and delightful urbanism, anti-capitalism</p>
 
     <h3>Fun Projects</h3>
     <ul>
       <li><a class="link" href="/pandemic-data">Pandemic Data</a></li>
+      <li><a class="link" href="/sutro">Sutro Tower</a></li>
+      <li><a class="link" href="https://bit.ly/33GNQ9K">How can we regain our trust in the Internet?</a>, a zine I made
+        as part of my final project </li>
     </ul>
 
-    <h3>Favorite Books</h3>
-    <ul>
-      <li><i>Singing Hills Cycle</i> novellas by Nghi Vo</li>
-      <li><i>Monk & Robot</i> novellas by Becky Chambers</li>
-      <li><i>The Jakarta Method</i> by Vincent Bevins</li>
-      <li><i>A Tale for the Time Being</i> by Ruth Ozeki</li>
-      <li><i>Girl, Woman, Other</i> by Bernardine Evaristo</li>
-      <li><i>The Way Spring Arrives and Other Stories</i> anthology curated by Yu Chen, et. al.</li>
-      <li><i>I'm Waiting for You and Other Stories</i> by Kim Bo-Young</li>
-      <li><i>Ace</i> by Angela Chen</li>
-      <li><i>The Big Friendship</i> by Aminatou Sow and Anne Friedman</li>
-      <li><i>On a Sunbeam</i> by Tillie Walden</li>
-    </ul>
   </div>
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 </body>
