--- a/sutro/index.html
+++ b/sutro/index.html
@@ -19,13 +19,19 @@
         <p>Every single day during 2019, sometimes multiple times a day, I took a picture of Sutro Tower from my
             apartment, using a camera mounted on a tripod that (mostly) stayed in the same place. I then stitched all of
             these photos together into a video, which you can watch below.</p>
-        <video href="sutro2019.mp4"></video>
-        <p>Over the course of the year, it was really cool to see the changes to the tower, particularly the moment when
-            the third tower was taken down for repairs. It was also neat to see that you could witness mundane moments
-            like sunsets and fog rolls, natural occurrences, while also getting to see deliberate man-made moments like
-            the Pink Triangle going up and down during Pride Weekend, or the third tower being taken down for repairs in
+        <video width="320" height="240" controls>
+            <source src="sutro2019.mp4" type="video/mp4">
+        </video>
+        <p>Over the course of the year, it was really cool to see the changes to the tower, particularly the moment
+            when
+            the third tower was taken down for repairs. It was also neat to see that you could witness mundane
+            moments
+            like sunsets and fog rolls, natural occurrences, while also getting to see deliberate man-made moments
+            like
+            the Pink Triangle going up and down during Pride Weekend, or the third tower being taken down for
+            repairs in
             November.</p>
-        <a href="https://photos.app.goo.gl/w2vnNAyLbhLScegU6">Entire Album</a>
+        <a class="link" href="https://photos.app.goo.gl/w2vnNAyLbhLScegU6">Entire Album</a>
     </div>
 </body>
 
