fixing more text

--- a/sutro/index.html
+++ b/sutro/index.html
@@ -22,9 +22,8 @@
         <video width="320" height="240" controls>
             <source src="sutro2019.mp4" type="video/mp4">
         </video>
-        <p>Over the course of the year, it was really cool to see the changes to the tower, particularly the moment
-            when
-            the third tower was taken down for repairs. It was also neat to see that you could witness mundane
+        <p>Over the course of the year, it was really cool to see the changes to the tower. It was also neat to see that
+            you could witness mundane
             moments
             like sunsets and fog rolls, natural occurrences, while also getting to see deliberate man-made moments
             like
