fixing more text

--- a/index.html
+++ b/index.html
@@ -62,9 +62,8 @@
     <h3>Fun Projects</h3>
     <ul>
       <li><a class="link" href="/pandemic-data">Pandemic Data</a></li>
-      <li><a class="link" href="/sutro">Sutro Tower</a></li>
-      <li><a class="link" href="https://bit.ly/33GNQ9K">How can we regain our trust in the Internet?</a>, a zine I made
-        as part of my final project </li>
+      <li><a class="link" href="/sutro">Sutro Tower 2019</a></li>
+      <li><a class="link" href="https://bit.ly/33GNQ9K">How can we regain our trust in the Internet?</a></li>
     </ul>
 
   </div>
