Updating to reflect sabbatical

--- a/index.html
+++ b/index.html
@@ -25,15 +25,15 @@
     </div>
 
     <h3>By Day</h3>
-    <p>I currently work as a data engineer at <a class="link" href="https://recidiviz.org">Recidiviz</a>,
-      specifically working on
-      improving the data platform the company has built that can then shed light on ways to nudge criminal justice
-      systems in the US towards decarceration.</p>
-    <p>Previously, I was an ML engineer at <a class="link" href="https://about.twitter.com/">Twitter</a>, working on
+    <p>I'm currently on a personal sabbatical, exploring opportunities in tech policy as well as doing some personal
+      education to eventually re-enter the Trust and Safety engineering world.</p>
+    <p>Previously, I was a data engineer at <a class="link" href="https://recidiviz.org">Recidiviz</a>, supporting
+      platform expansion for nudging criminal justice agencies towards decarceration, and an ML engineer at <a
+        class="link" href="https://about.twitter.com/">Twitter</a>, working on
       detections and remediations that supported user trust
       and
-      safety and prevented harassment, abuse and manipulation in online discourse on the platform. My experience there
-      primarily informs my own views on how we should organize as tech workers today.</p>
+      safety and prevented harassment, abuse and manipulation in online discourse on the platform. My experience at
+      Twitter primarily informs my own views on how we should organize as tech workers today.</p>
     <p>I graduated from the
       <a class="link" href="http://illinois.edu/">University of Illinois at Urbana-Champaign</a> with a B.S. in Computer
       Science. I'm currently living on unceded Ohlone land (Oakland, CA).
@@ -44,13 +44,12 @@
 
     <h3>By Night</h3>
     <p>I help organize the <a class="link" href="https://ebabz.org/">East Bay Alternative Books and Zines Fest</a> and
-      was both a cohort member and then a co-steward of <a class="link" href="https://school.logicmag.io/">Collective
+      was both a cohort member and now a co-steward of <a class="link" href="https://school.logicmag.io/">Collective
         Action School</a>
-      (formerly Logic School), a community school for tech workers. I am currently enrolled in the Drawing Data by Hand
-      class held via <a class="link" href="https://sfpc.study/">the School for Poetic Computation.</a> </p>
+      (formerly Logic School), a community school for tech workers.</p>
     <p>I dabble in
       creative writing, street and landscape photography, and mild (emphasis: <i>mild</i>) data art as creative art
-      practices. I also enjoy cooking Chinese
+      practices. I love to figure skate. I also enjoy cooking Chinese
       food, reading a lot of science fiction and fantasy novels, watching anything animated,
       curating and degendering
       fashion, and listening to
